--- a/Libertas2016Ecommerce/web/index.html
+++ b/Libertas2016Ecommerce/web/index.html
@@ -85,50 +85,63 @@
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade1.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Pinga de Alambik</h2>
+                                <p>R$ 20,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade2.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Amarula</h2>
+                                <p>R$ 80,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade3.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Bacardi Big Apple</h2>
+                                <p>R$ 30,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade4.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Chapagne Taittinger</h2>
+                                <p>R$ 60,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade5.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Vodka Absolut 100</h2>
+                                <p>R$ 90,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade6.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Vodka Smirnoff</h2>
+                                <p>R$ 35,00</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade7.png" alt=""/></figure>
-                                <h2></h2>
-                                <p></p>
+                                <h2>Cerveja Corona</h2>
+                                <p>R$ 23,99</p>
+                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+
                             </div>
                         </div>
                     </div>
@@ -151,9 +164,13 @@
     jQuery('#slideProdNovidades').slide2({
         itens: 4,
         arrows: true,
+        arrowLabelImage: true,
+        arrowLabelImagePrev: 'lib/plugins/Dev_slide2/imagens/arrow_prev2.png',
+        arrowLabelImageNext: 'lib/plugins/Dev_slide2/imagens/arrow_next2.png',
         autoPlay: true,
         autoPlayDelay: 8000,
         margin: 10,
-        bullets: false
+        bullets: false,
+        pauseOnHover: true
     });
 </script>
