--- a/Libertas2016Ecommerce/web/index.html
+++ b/Libertas2016Ecommerce/web/index.html
@@ -15,14 +15,55 @@
         <script src="lib/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="lib/plugins/Dev_banner2/Dev_banner2.js" type="text/javascript"></script>
         <script src="lib/plugins/Dev_slide2/Dev_slide2.js" type="text/javascript"></script>
-        <script src="lib/js/functions.js" type="text/javascript"></script>
         <!-- Google Fonts -->
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
         <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     </head>
     <body>
         <div class="container">
-            <header id="header"></header>
+            <header>
+                <div class="header-top padding-top-bottom">
+                    <div class="row">
+                        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            <p>Seja Bem Vindo à Costi Bebidas <b>Já é cadastrado?</b></p>
+                        </div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                            <span class="pull-right"><i class="fa fa-phone" aria-hidden="true"></i> (35) 99999-9999</span>
+                        </div>
+                        <div class="col-xs-2 col-sm-4 col-md-4 col-lg-4">
+                            <form class="form-header">
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <input type="text" class="form-control">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-default" type="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+                                        </span>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="header-center margin-bottom">
+                    <div class="row">
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 logo">
+                            <img src="imagens/logo.png" alt=""/>
+                        </div>
+                        <div class="col-xs-9 col-sm-9 col-md-9 col-lg-9 menu">
+                            <ul>
+                                <li><a>VINHOS</a></li>
+                                <li><a>CEVAS</a></li>
+                                <li><a>CHAMPAGNES</a></li>
+                                <li><a>DESTILADOS</a></li>
+                                <li><a>ENERGÉTICOS</a></li>
+                                <li><a>RUM</a></li>
+                                <li><a>LICOR</a></li>
+                                <li><a>SAQUÊ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </header>
             <div class="banner text-center relative margin-bottom" id="banner2">
                 <div class="banner-item">
                     <img src="imagens/banner1.png" alt=""/>
@@ -44,63 +85,50 @@
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade1.png" alt=""/></figure>
-                                <h2>Pinga de Alambik</h2>
-                                <p>R$ 20,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade2.png" alt=""/></figure>
-                                <h2>Amarula</h2>
-                                <p>R$ 80,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade3.png" alt=""/></figure>
-                                <h2>Bacardi Big Apple</h2>
-                                <p>R$ 30,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade4.png" alt=""/></figure>
-                                <h2>Chapagne Taittinger</h2>
-                                <p>R$ 60,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade5.png" alt=""/></figure>
-                                <h2>Vodka Absolut 100</h2>
-                                <p>R$ 90,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade6.png" alt=""/></figure>
-                                <h2>Vodka Smirnoff</h2>
-                                <p>R$ 35,00</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                         <div class="grid-slide">
                             <div class="text-center">
                                 <figure><img src="imagens/prodNovidade7.png" alt=""/></figure>
-                                <h2>Cerveja Corona</h2>
-                                <p>R$ 23,99</p>
-                                <div class="btn-comprar"><a href=""><i class="fa fa-shopping-cart"></i><span>Adicionar ao carrinho</span></a></div>
-
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -123,13 +151,9 @@
     jQuery('#slideProdNovidades').slide2({
         itens: 4,
         arrows: true,
-        arrowLabelImage: true,
-        arrowLabelImagePrev: 'lib/plugins/Dev_slide2/imagens/arrow_prev2.png',
-        arrowLabelImageNext: 'lib/plugins/Dev_slide2/imagens/arrow_next2.png',
         autoPlay: true,
         autoPlayDelay: 8000,
         margin: 10,
-        bullets: false,
-        pauseOnHover: true
+        bullets: false
     });
 </script>
